<resources>

    <string name="facebook_app_id">2168686673304455</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token">087340d1f24a0a4c03a3cc031c46ac25</string>

    <string name="app_name">KimBu</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_by_number">Search without typing the country code</string>
    <string name="feed">Feed</string>
    <string name="call_history">Call history</string>
    <string name="notifications">Notifications</string>
    <string name="number_blocking">Number blocking</string>
    <string name="statistics">Statistics</string>
    <string name="trust_score">Trust score</string>
    <string name="language_settings">Language settings</string>
    <string name="theme_color">Theme / color</string>
    <string name="rate_us">Rate us</string>
    <string name="about_us">About us</string>
    <string name="kim_bu_website">KimBu website</string>
    <string name="help_support">Help / support</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="show_more">Show more</string>
    <string name="permission_required">Without permission we cannot read you call history</string>
    <string name="ok">Ok</string>
    <string name="call">Call</string>
    <string name="report">Report</string>
    <string name="add">Add</string>
    <string name="call_permession_text">Without your permission we cannot call</string>
    <string name="search_caps">SEARCH</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_email">Login with email</string>
    <string name="enter_your_email_address_and_password">Enter your email address and password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_full_name_and_email_address">Enter your full name and email address</string>
    <string name="first_name">First name</string>
    <string name="continue_text">Continue</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="add_contact_permission">Without permission we cannot add contact</string>
    <string name="contact_added">Contact has been added</string>
    <string name="add_contact_cancelled">Add Contact Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="block_number_message">Are you sure to block number</string>
    <string name="block_number">Block number</string>
    <string name="unblock_number_message">Are you sure to unblock number</string>
    <string name="unblock_number">Unblock number</string>
    <string name="block_number_permission">Without permission we cannot block number</string>
    <string name="block">Block</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="set_kim_bu_as_default_calling_app_text">To get information about our visitors\' performance, experience and how they use our applications, by obtaining contact information in the phone book; I give my consent to access my purposeful information to analyze site traffic, to show our users personalized/location-based campaigns and content, and to use commercial data with our partners so that they can interact with our social media content.</string>
    <string name="set_as_default">Accept</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="input_email_address">Please input email address</string>
    <string name="input_password">Please input password</string>
    <string name="input_first_name">Please input first name</string>
    <string name="input_last_name">Please input last name</string>
    <string name="input_phone_number">Please input phone number</string>
    <string name="sign_out">Sign out</string>
    <string name="canceled">Canceled</string>
    <string name="somethine_went_wrong">Something went wrong</string>
    <string name="sign_out_message">Are you sure to sign out?</string>
    <string name="total_count">Total Search Count: </string>
    <string name="set_kim_bu_as_default">Please set Kim Bu app as default</string>
    <string name="about_us_text">By combining user-friendly designs with up-to-date and innovative technologies, we offer compatible and convenient applications free of charge.</string>
    <string name="save">Save</string>
    <string name="Forgot_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="please_check_your_mail">Please check your email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="please_accept_permission">Please accept the Privacy Policy</string>
    <string name="accept_privacy_policy">Understood</string>
    <string name="search_contacts">Search contacts</string>
    <string name="contacts">Contacts</string>
    <string name="our_commitment_to_protecting_your_privacy">Our commitment to protecting your privacy</string>
    <string name="please_scroll_below">Please scroll below to review the key points of our Privacy Policy and Terms of service</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="we_use_data_for_the_following_purposes_n_n_to_enable_personalise_deliver_and_improve_our_services_n_n_to_protect_the_right_and_safety_of_kimbu_and_its_users_including_against_malicious_and_unwanted_calls_n_n_n_tags_and_your_current_stored_data_n_n_your_contacts_in_your_phonebook_are_never_stored_somewhere_n_n_when_you_search_for_a_phone_number_or_view_a_user_s_profile_the_phone_number_profile_is_searched_in_our_services_n_n_n_if_you_do_not_with_to_accept_you_may_uninstall_kimbu">We use data for the following purposes:\n\n • To enable, personalise, deliver and improve our Services,\n\n • To protect the right and safety of KimBu and its users, including against malicious and unwanted calls.\n\n\n Tags and your current stored data:\n\n • Your contacts in your phonebook are never stored somewhere,\n\n • When you search for a phone number or view a user\'s profile, the phone number/profile is searched in our Services.\n\n\n If you do not with to accept, you may uninstall KimBu</string>

</resources>