<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature_auth.presentation.commitment.CommitmentFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_security_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/our_commitment_to_protecting_your_privacy"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/please_scroll_below"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/we_use_data_for_the_following_purposes_n_n_to_enable_personalise_deliver_and_improve_our_services_n_n_to_protect_the_right_and_safety_of_kimbu_and_its_users_including_against_malicious_and_unwanted_calls_n_n_n_tags_and_your_current_stored_data_n_n_your_contacts_in_your_phonebook_are_never_stored_somewhere_n_n_when_you_search_for_a_phone_number_or_view_a_user_s_profile_the_phone_number_profile_is_searched_in_our_services_n_n_n_if_you_do_not_with_to_accept_you_may_uninstall_kimbu"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/agree_check_box"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/privacy_policy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/privacy_policy"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:text="@string/amp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/terms_of_service_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/privacy_policy"
            android:textColor="@color/primary" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/agree_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:buttonTint="@color/primary"
        android:checked="false"
        android:text="@string/agree_and_continue"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>