<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Forgot_password"
        android:textColor="@color/primary"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/forgot_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/primary"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="15sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <ProgressBar
            android:id="@+id/forgot_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/primary"
            android:visibility="invisible" />

        <Button
            android:id="@+id/forgot_send_button"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="13sp" />

    </FrameLayout>


    <TextView
        android:id="@+id/forgot_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        android:textSize="15sp" />

</LinearLayout>