<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".feature_auth.presentation.email_log_in.EmailLogInFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_your_email_address_and_password"
        android:textAlignment="center"
        android:textColor="?attr/secondary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="?attr/secondary"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/secondary"
            android:hint="@string/enter_your_email_address"
            android:paddingStart="30dp"
            android:textColor="?attr/background_color"
            android:textColorHint="?attr/tertiary_color"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="?attr/secondary"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/secondary"
            android:hint="@string/password"
            android:paddingStart="30dp"
            android:inputType="textPassword"
            android:textColor="?attr/background_color"
            android:textColorHint="?attr/tertiary_color"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="?attr/primary_color"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/sign_up"
        android:textColor="?attr/secondary"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:iconTint="?attr/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:strokeColor="?attr/secondary" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

</androidx.constraintlayout.widget.ConstraintLayout>