<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/search_contacts_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/tertiary_color"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageView
                android:id="@+id/search_logo_iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_search_24_white" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="7"
                android:background="?attr/tertiary_color"
                android:hint="@string/search_contacts"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>

    <include
        android:id="@+id/call_bottom_sheet"
        layout="@layout/bottom_sheet_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="bottom"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/set_as_default_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textAlignment="center"
            android:textColor="?attr/secondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:weightSum="10"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/set_kim_bu_as_default_calling_app_text"
                android:textAlignment="center"
                android:textColor="?attr/secondary"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chack_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:buttonTint="@color/primary"
                    android:checked="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/accept_privacy_policy"
                    android:textColor="?attr/secondary"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_security_24"
            app:layout_constraintBottom_toTopOf="@id/set_as_default_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/set_as_default_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/primary_color"
            android:text="@string/set_as_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>